clusters/cluster/apps/media/jellyseerr/service-jellyseerr.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: apps
spec:
  selector:
    app: jellyseerr
  ports:
    - protocol: TCP
      port: 5055
      targetPort: 5055
      name: http
